--- a/package.json
+++ b/package.json
@@ -19,6 +19,7 @@
     "sharp": "^0.30.0"
   },
   "devDependencies": {
+    "@types/node": "^17.0.14",
     "@types/react": "17.0.38",
     "@typescript-eslint/eslint-plugin": "^5.10.2",
     "autoprefixer": "^10.4.2",
