--- a/package.json
+++ b/package.json
@@ -9,26 +9,27 @@
     "lint": "next lint"
   },
   "dependencies": {
-    "@fortawesome/fontawesome-svg-core": "^6.5.1",
-    "@fortawesome/free-brands-svg-icons": "6.5.1",
-    "@fortawesome/free-solid-svg-icons": "6.5.1",
-    "@fortawesome/react-fontawesome": "^0.2.0",
-    "next": "14.1.0",
-    "react": "18.2.0",
-    "react-dom": "18.2.0",
-    "sharp": "^0.33.2"
+    "@fortawesome/fontawesome-svg-core": "^6.5.2",
+    "@fortawesome/free-brands-svg-icons": "6.5.2",
+    "@fortawesome/free-solid-svg-icons": "6.5.2",
+    "@fortawesome/react-fontawesome": "^0.2.2",
+    "@types/node": "^20.12.12",
+    "babel-plugin-react-compiler": "0.0.0-experimental-592953e-20240517",
+    "next": "15.0.0-rc.0",
+    "react": "19.0.0-rc-935180c7e0-20240524",
+    "react-dom": "19.0.0-rc-935180c7e0-20240524",
+    "sharp": "^0.33.4"
   },
   "devDependencies": {
-    "@types/node": "^20.11.16",
-    "@types/react": "18.2.52",
-    "@typescript-eslint/eslint-plugin": "^6.20.0",
-    "autoprefixer": "^10.4.17",
-    "eslint": "8.56.0",
-    "eslint-config-next": "14.1.0",
+    "@types/react": "18.3.3",
+    "@typescript-eslint/eslint-plugin": "^7.10.0",
+    "autoprefixer": "^10.4.19",
+    "eslint": "9.3.0",
+    "eslint-config-next": "14.2.3",
     "eslint-config-prettier": "^9.1.0",
-    "postcss": "^8.4.33",
+    "postcss": "^8.4.38",
     "prettier": "^3.2.5",
-    "tailwindcss": "^3.4.1",
-    "typescript": "5.3.3"
+    "tailwindcss": "^3.4.3",
+    "typescript": "5.4.5"
   }
 }
