--- a/package.json
+++ b/package.json
@@ -9,27 +9,27 @@
     "lint": "next lint"
   },
   "dependencies": {
-    "@fortawesome/fontawesome-svg-core": "^6.5.2",
-    "@fortawesome/free-brands-svg-icons": "6.5.2",
-    "@fortawesome/free-solid-svg-icons": "6.5.2",
+    "@fortawesome/fontawesome-svg-core": "^6.7.1",
+    "@fortawesome/free-brands-svg-icons": "6.7.1",
+    "@fortawesome/free-solid-svg-icons": "6.7.1",
     "@fortawesome/react-fontawesome": "^0.2.2",
-    "@types/node": "^20.12.12",
-    "babel-plugin-react-compiler": "0.0.0-experimental-592953e-20240517",
-    "next": "15.0.0-rc.0",
+    "@types/node": "^22.10.1",
+    "babel-plugin-react-compiler": "19.0.0-beta-df7b47d-20241124",
+    "next": "15.0.4-canary.31",
     "react": "19.0.0-rc-935180c7e0-20240524",
     "react-dom": "19.0.0-rc-935180c7e0-20240524",
-    "sharp": "^0.33.4"
+    "sharp": "^0.33.5"
   },
   "devDependencies": {
-    "@types/react": "18.3.3",
-    "@typescript-eslint/eslint-plugin": "^7.10.0",
-    "autoprefixer": "^10.4.19",
-    "eslint": "9.3.0",
-    "eslint-config-next": "14.2.3",
+    "@types/react": "18.3.12",
+    "@typescript-eslint/eslint-plugin": "^8.16.0",
+    "autoprefixer": "^10.4.20",
+    "eslint": "9.15.0",
+    "eslint-config-next": "15.0.3",
     "eslint-config-prettier": "^9.1.0",
-    "postcss": "^8.4.38",
-    "prettier": "^3.2.5",
-    "tailwindcss": "^3.4.3",
-    "typescript": "5.4.5"
+    "postcss": "^8.4.49",
+    "prettier": "^3.4.1",
+    "tailwindcss": "^3.4.15",
+    "typescript": "5.7.2"
   }
 }
