--- a/package.json
+++ b/package.json
@@ -9,27 +9,29 @@
     "lint": "next lint"
   },
   "dependencies": {
-    "@fortawesome/fontawesome-svg-core": "^6.7.1",
-    "@fortawesome/free-brands-svg-icons": "6.7.1",
-    "@fortawesome/free-solid-svg-icons": "6.7.1",
+    "@fortawesome/fontawesome-svg-core": "^6.7.2",
+    "@fortawesome/free-brands-svg-icons": "6.7.2",
+    "@fortawesome/free-solid-svg-icons": "6.7.2",
     "@fortawesome/react-fontawesome": "^0.2.2",
-    "@types/node": "^22.10.1",
+    "@tailwindcss/postcss": "^4.0.7",
+    "@types/node": "^22.13.4",
     "babel-plugin-react-compiler": "19.0.0-beta-df7b47d-20241124",
-    "next": "15.0.4-canary.31",
-    "react": "19.0.0-rc-935180c7e0-20240524",
-    "react-dom": "19.0.0-rc-935180c7e0-20240524",
+    "next": "15.2.0-canary.66",
+    "react": "19.0.0",
+    "react-dom": "19.0.0",
     "sharp": "^0.33.5"
   },
   "devDependencies": {
-    "@types/react": "18.3.12",
-    "@typescript-eslint/eslint-plugin": "^8.16.0",
+    "@types/react": "19.0.10",
+    "@typescript-eslint/eslint-plugin": "^8.24.1",
     "autoprefixer": "^10.4.20",
-    "eslint": "9.15.0",
-    "eslint-config-next": "15.0.3",
-    "eslint-config-prettier": "^9.1.0",
-    "postcss": "^8.4.49",
-    "prettier": "^3.4.1",
-    "tailwindcss": "^3.4.15",
-    "typescript": "5.7.2"
-  }
+    "eslint": "9.20.1",
+    "eslint-config-next": "15.1.7",
+    "eslint-config-prettier": "^10.0.1",
+    "postcss": "^8.5.3",
+    "prettier": "^3.5.1",
+    "tailwindcss": "^4.0.7",
+    "typescript": "5.7.3"
+  },
+  "type": "module"
 }
