--- a/package.json
+++ b/package.json
@@ -13,25 +13,25 @@
     "@fortawesome/free-brands-svg-icons": "6.7.2",
     "@fortawesome/free-solid-svg-icons": "6.7.2",
     "@fortawesome/react-fontawesome": "^0.2.2",
-    "@tailwindcss/postcss": "^4.1.3",
-    "@types/node": "^22.14.0",
-    "babel-plugin-react-compiler": "19.0.0-beta-df7b47d-20241124",
-    "next": "15.3.1-canary.4",
-    "react": "19.0.0",
-    "react-dom": "19.0.0",
-    "sharp": "^0.33.5"
+    "@tailwindcss/postcss": "^4.1.11",
+    "@types/node": "^24.0.10",
+    "babel-plugin-react-compiler": "19.1.0-rc.2",
+    "next": "15.4.0-canary.110",
+    "react": "19.1.0",
+    "react-dom": "19.1.0",
+    "sharp": "^0.34.2"
   },
   "devDependencies": {
-    "@types/react": "19.0.10",
-    "@typescript-eslint/eslint-plugin": "^8.29.1",
+    "@types/react": "19.1.8",
+    "@typescript-eslint/eslint-plugin": "^8.35.1",
     "autoprefixer": "^10.4.21",
-    "eslint": "9.22.0",
-    "eslint-config-next": "15.2.2",
-    "eslint-config-prettier": "^10.1.2",
-    "postcss": "^8.5.3",
-    "prettier": "^3.5.3",
-    "tailwindcss": "^4.1.3",
-    "typescript": "5.8.2"
+    "eslint": "9.30.1",
+    "eslint-config-next": "15.3.4",
+    "eslint-config-prettier": "^10.1.5",
+    "postcss": "^8.5.6",
+    "prettier": "^3.6.2",
+    "tailwindcss": "^4.1.11",
+    "typescript": "5.8.3"
   },
   "type": "module"
 }
