--- a/package.json
+++ b/package.json
@@ -13,24 +13,24 @@
     "@fortawesome/free-brands-svg-icons": "7.1.0",
     "@fortawesome/free-solid-svg-icons": "7.1.0",
     "@fortawesome/react-fontawesome": "^3.1.0",
-    "@tailwindcss/postcss": "^4.1.14",
-    "@types/node": "^24.6.2",
-    "babel-plugin-react-compiler": "19.1.0-rc.3",
-    "next": "15.6.0-canary.40",
+    "@tailwindcss/postcss": "^4.1.16",
+    "@types/node": "^24.9.1",
+    "next": "16.0.0",
     "react": "19.2.0",
     "react-dom": "19.2.0",
     "sharp": "^0.34.4"
   },
   "devDependencies": {
-    "@types/react": "19.2.0",
-    "@typescript-eslint/eslint-plugin": "^8.45.0",
+    "@types/react": "19.2.2",
+    "@typescript-eslint/eslint-plugin": "^8.46.2",
     "autoprefixer": "^10.4.21",
-    "eslint": "9.37.0",
-    "eslint-config-next": "15.5.4",
+    "babel-plugin-react-compiler": "19.1.0-rc.3",
+    "eslint": "9.38.0",
+    "eslint-config-next": "16.0.0",
     "eslint-config-prettier": "^10.1.8",
     "postcss": "^8.5.6",
     "prettier": "^3.6.2",
-    "tailwindcss": "^4.1.14",
+    "tailwindcss": "^4.1.16",
     "typescript": "5.9.3"
   },
   "type": "module"
